# merge-ableton-favorites

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/merge_ableton_favorites/: __main__.py  cli.py  merge_ableton_favorites.py
tests/: test_get_paths.py
