[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "merge_ableton_favorites"
description = "Merge Ableton Live favorites from multiple folders"
readme = "README.md"
license = {file = "LICENSE"}

dynamic = [
    "version"
]

[project.optional-dependencies]
dev = ["black", "pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
]
